src/objects/Grace_Period__c.object
<CustomObject>
    <description>Object used to capture additional grace period, against Quotes.</description>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>days</fullName>
                </value>
                <value>
                    <fullName>months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Grace Periods</relationshipLabel>
        <relationshipName>Grace_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Grace Period</label>
    <nameField>
        <displayFormat>GP-{000000}</displayFormat>
        <label>Grace Period Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grace Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Grace_Period_must_fit_within_Quote_dates</fullName>
        <active>true</active>
        <description>Grace period start date and duration must fit within duration of the lease</description>
        <errorConditionFormula>(Start_Date__c &lt; Quote__r.Proposed_Start_Date__c) || (Start_Date__c &gt; Quote__r.Proposed_End_Date__c) || ((Start_Date__c + Duration__c) &gt; Quote__r.Proposed_End_Date__c)</errorConditionFormula>
        <errorMessage>Grace period must fall within the duration of the lease.</errorMessage>
    </validationRules>
</CustomObject>